--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,8 @@ jobs:
 
       - name: Generate mock
         run: |
+          go get github.com/vektra/mockery/v2/.../
+          go get github.com/stretchr/testify
           mockery --dir=repository --output=mock --outpkg=mocks --all
 
       - name: Test
