--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Generate mock
         run: |
-          go get github.com/vektra/mockery/v2/.../
+          go install github.com/vektra/mockery/v2@v2.20.0
           go get github.com/stretchr/testify
           mockery --dir=repository --output=mock --outpkg=mocks --all
 
