--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,9 +17,17 @@ jobs:
         with:
           go-version: '1.20'
 
+      - name: Install mockery
+        run: go install github.com/vektra/mockery/v2@v2.20.0
+
+      - name: Install testify
+        run: go get github.com/stretchr/testify
+
+      - name: Generate mock
+        run: mockery --dir=repository --output=mock --outpkg=mocks --all
+
       - name: Build
-        run: |
-          go build -o crud ./main.go
+        run: go build -o crud ./main.go
 
       - name: Build Docker image
         run: docker build -t pascalpap20/crm-service-image .
@@ -41,15 +49,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+
+      - name: Install testify
+        run: go get github.com/stretchr/testify
+
       - name: Generate mock
-        run: |
-          go install github.com/vektra/mockery/v2@v2.20.0
-          go get github.com/stretchr/testify
-          mockery --dir=repository --output=mock --outpkg=mocks --all
+        run: mockery --dir=repository --output=mock --outpkg=mocks --all
 
       - name: Test
-        run: |
-          go test -v crud/modules/account crud/modules/account
+        run: go test -v crud/modules/account crud/modules/account
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,5 +71,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: |
-          docker-compose up -d
+        run: docker-compose up -d
